<resources>
    <string name="app_name">Final project 1</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="movie_poster">Movie poster</string>
    <string name="find_your_movie">Find Your Movie</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_title">Movie title</string>
    <string name="save_favorites">Save to favorites</string>
    <string name="movie_poster1">movie poster</string>
    <string name="actors">Actors:</string>
    <string name="movie_description1">Movie Rating</string>
    <string name="director">Director:</string>
    <string name="movie_title1">Movie Title</string>
    <string name="year">Year:</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="movie_title2">Movie Title</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="go_to_favorites_movies">go to favorites movies</string>
    <string name="btn_favorites_movies_menu">Favorite Movies</string>
    <string name="about">About</string>
    <string name="main_menu">Main menu</string>
    <string name="about_us"><u>About us</u></string>
    <string name="bow_valley_college_emblem">Bow valley college emblem\n</string>
    <string name="members">Members\n</string>
    <string name="carlos_alvarez">Carlos Alvarez \nRuss Stodley\n Aaron Amoso</string>
    <string name="open_menu">Open Menu</string>
</resources>