<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_findYourMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/find_your_movie"
            android:textColor="@color/text_primary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_moviePoster"
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:contentDescription="@string/movie_poster"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/movie_title"
            android:textColor="@color/text_primary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_movieDesciption"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:paddingTop="6dp"
            android:paddingBottom="12dp"
            android:text="@string/movie_description"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btn_previous"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/primary_button"
                android:padding="12dp"
                android:text="@string/previous"
                android:textColor="#FAFAFA"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_button"
                android:onClick="nextButton"
                android:padding="12dp"
                android:text="@string/next"
                android:textColor="#FAFAFA"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>